# minifetch

./: .gitignore  CMakeLists.txt  license.txt  readme.md
src/: main.cpp  minifetch.cpp  minifetch.h
